main - adding status endpoint to yml and controller
