# swagger_server/controllers/get_records_controller.py
@@ -14,3 +14,14 @@ def get_record():  # noqa: E501
     :rtype: RecordStatus
     """
     return 'Success'
+
+
+def get_status():  # noqa: E501
+    """Gets all the records
+
+     # noqa: E501
+
+
+    :rtype: RecordStatus
+    """
+    return 'Status Success'
